share dependencies with the main source set by default